--- a/index.html
+++ b/index.html
@@ -10,19 +10,33 @@
 </head>
 <body>
     <header id="site_header">
-        <div class="speaker_view">
-            <button>
-                <i class="fa-solid fa-grid"></i>
-                Speaker View
-            </button>
-            <button>
-                <i class="fa-solid fa-maximize"></i>
-            </button>
+       <div class="container_fluid">
+        <div class="row j_content">
+            <div class="speaker_btn">
+                <button class="grid">
+                    <i class="fa-solid fa-maximize"></i>
+                    Speaker View
+                </button>
+                <button class="view">
+                    <i class="fa-solid fa-maximize"></i>
+                </button>
+            </div>
+            <!-- /.speaker_view -->
         </div>
-        <!-- /.speaker_view -->
+        <!-- /.row -->
+       </div>
+       <!-- /.container -->
     </header>
     <!-- /#site_header -->
-    <main id="site_main"></main>
+    <main id="site_main">
+        <div class="container">
+            <div class="row">
+                
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </main>
     <!-- /#site_main -->
     <footer id="site_footer"></footer>
     <!-- /#site_footer -->
