--- a/index.html
+++ b/index.html
@@ -31,14 +31,68 @@
     <main id="site_main">
         <div class="container">
             <div class="row">
-                
+
             </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
     </main>
     <!-- /#site_main -->
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        <div class="container_fluid">
+            <div class="row s_between">
+                <div class="option_video">
+                    <button>
+                        <i class="fa-solid fa-microphone"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-video"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </button>
+                </div>
+                <!-- /.option_video -->
+                <div class="menu_video">
+                    <button>
+                        <i class="fa-solid fa-user-plus"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-user-group"></i>
+                    </button>
+                    <button>
+                        <i class="fa-regular fa-square-poll-vertical"></i>
+                    </button>
+                    <button class="share_screen">
+                        <i class="fa-solid fa-share-from-square"></i>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-comment"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-record-vinyl"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-border-all"></i>
+                    </button>
+                    <button>
+                        <i class="fa-solid fa-ellipsis"></i>
+                    </button>
+                </div>
+                <!-- /.menu_video -->
+                <div class="close_video">
+                    <button>End meeting</button>
+                </div>
+                <!-- /.close_video -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.conteiner_fluid -->
+    </footer>
     <!-- /#site_footer -->
 </body>
 </html>
