--- a/index.html
+++ b/index.html
@@ -31,8 +31,259 @@
     <main id="site_main">
         <div class="container">
             <div class="row">
-
-            </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
+                <div class="col-1 user">
+                    <img src="./assets/img/img_1.jpeg" alt="">
+                    <span class="voice">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallino
+                    </span>
+                </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
