add footer change

--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@
                         <i class="fa-solid fa-microphone"></i>
                     </button>
                     <button>
-                        <i class="fa-solid fa-angle-up"></i>
+                        <i class="fa-solid fa-angle-up arrow"></i>
                     </button>
                     <button>
                         <i class="fa-solid fa-video"></i>
                     </button>
                     <button>
-                        <i class="fa-solid fa-angle-up"></i>
+                        <i class="fa-solid fa-angle-up arrow"></i>
                     </button>
                 </div>
                 <!-- /.option_video -->
@@ -317,9 +317,9 @@
                     <button>
                         <i class="fa-regular fa-square-poll-vertical"></i>
                     </button>
-                    <button class="share_screen">
-                        <i class="fa-solid fa-share-from-square"></i>
-                        <i class="fa-solid fa-angle-up"></i>
+                    <button>
+                        <i class="fa-solid fa-share-from-square share_screen"></i>
+                        <i class="fa-solid fa-angle-up arrow"></i>
                     </button>
                     <button>
                         <i class="fa-solid fa-comment"></i>
