--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <!-- /#site_main -->
     <footer id="site_footer">
         <div class="container_fluid">
-            <div class="row s_between">
+            <div class="row s_between a_items">
                 <div class="option_video">
                     <button>
                         <i class="fa-solid fa-microphone"></i>
@@ -335,9 +335,7 @@
                     </button>
                 </div>
                 <!-- /.menu_video -->
-                <div class="close_video">
-                    <button>End meeting</button>
-                </div>
+                <div class="close_video">End meeting</div>
                 <!-- /.close_video -->
             </div>
             <!-- /.row -->
